--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,22 +3,13 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/mordor_boot_react
-#    url: jdbc:hsqldb:file:testdb
-    username: root
-#    username: sa
-    password: test1234
-#    password:
-    driver-class-name: com.mysql.jdbc.Driver
-#    driver-class-name: org.hsqldb.jdbc.JDBCDriver
-#    schema: classpath*:db/schema.sql
-#    data: classpath*:db/data.sql
+    schema: classpath*:db/schema.sql
+    data: classpath*:db/data.sql
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     properties:
       hibernate:
         show_sql: true
         format_sql: true
-        dialect: org.hibernate.dialect.MySQL5Dialect
